fix: adjust clearfix pseudo
Using an empty string prevents extra whitespace at bottom of viewport.
Especially since we don't float things so often anymore, this makes
for a tidier overall page layout.

Refs: CD-462

--- a/components/cd/cd-other/cd-layout--content.css
+++ b/components/cd/cd-other/cd-layout--content.css
@@ -14,7 +14,7 @@
   visibility: hidden;
   clear: both;
   height: 0;
-  content: ".";
+  content: "";
 }
 
 @media (min-width: 768px) {
